[fix] main content jumps when about me button is pressed.

--- a/app/assets/styles/modules/base/_base.css
+++ b/app/assets/styles/modules/base/_base.css
@@ -17,9 +17,3 @@ body {
 html {
   scroll-behavior: smooth;
 }
-
-body,
-html {
-  width: 100vw;
-  overflow-x: hidden;
-}
